# EasyVPK

./: CMakeLists.txt  README.md
sce_sys/livearea/contents/: template.xml
src/: main.cpp  main.hpp
src/screens/: list.cpp
